--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     </head>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <body>
+        <div class="wall">
+            <div class="titre">
+                <h1>KOMMUNALKA</h1>
+            </div>
+                <div class="form-group">
+                    <label for="password">Enter the password to enter</label>
+                    <div class="wrongpassword" style="display:none">Wrong Password !</div>
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                </div>
+                <button class="btn btn-primary" onclick="checkPassword()">Submit</button>
+        </div>
+        <div class="content" style="display:none">
         <!-- <div class="noisecover"> -->
             <div class="titre">
                 <h1>KOMMUNALKA</h1>
@@ -29,6 +41,7 @@
                 <div id="map"
                 </div>
             </div>
+        </div>
         <!-- </div> -->
         <!-- SCRIPTS -->
         <script src="./js/data.js"></script>
