--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <label for="password">Enter the password to enter</label>
                 <div class="wrongpassword" style="display:none">Wrong Password !</div>
-                <input class="form-control" id="password" placeholder="Password">
+                <input type="password" class="form-control" id="password" placeholder="Password">
             </div>
             <button class="btn btn-primary" onclick="checkPassword()">Submit</button>
         </div>
